# docs/swagger.json
@@ -1561,6 +1561,11 @@
             },
             "description": "Volume do livro.",
             "example": ["Fantasia", "Clássicos"]
+          },
+          "inserted_by": {
+            "type": "string",
+            "description": "Id do usuário que adicionou o livro na base de dados da aplicação.",
+            "example": "67c88bf97fca672689c6520b"
           }
         }
       },
